--- a/mountain_project/src/main/resources/templates/manager/main.html
+++ b/mountain_project/src/main/resources/templates/manager/main.html
@@ -7,8 +7,8 @@
   <title>$Title$</title>
 </head>
 <body>
-  <h1>게시판</h1>
-  <h1>문의글</h1>
-  <h1>데이터</h1>
+  <h3>게시판</h3>
+  <h3>문의글</h3>
+  <h3>리뷰데이터</h3>
 </body>
 </html>
