--- a/mountain_project/src/main/resources/templates/manager/mReadBbs.html
+++ b/mountain_project/src/main/resources/templates/manager/mReadBbs.html
@@ -2,10 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>게시판 조회</title>
+  <script>
+    function handleSearch(event) {
+      const searchType = document.querySelector('select[name="searchType"]').value;
+      if (searchType === 'all') {
+        event.preventDefault(); // 폼의 기본 제출을 막습니다.
+        window.location.href = 'http://localhost:9090/manager/viewBbsAll'; // 전체 게시글 조회 페이지로 이동합니다.
+      }
+    }
+  </script>
 </head>
 <body>
 <h1>검색 결과</h1>
-<form th:action="@{/manager/search}" method="get">
+<form th:action="@{/manager/search}" method="get" onsubmit="handleSearch(event)">
   <select name="searchType">
     <option value="all" selected> 전체</option>
     <option value="title">제목</option>
@@ -18,6 +27,7 @@
 <table>
   <thead>
   <tr>
+    <th>선택</th>
     <th>닉네임</th>
     <th>제목</th>
     <th>내용</th>
@@ -31,6 +41,7 @@
   </thead>
   <tbody>
   <tr th:each="bbs : ${list}">
+    <td><input type="checkbox" name="bbsIds" th:value="${bbs.bbsId}"/></td>
     <td th:text="${bbs.nickname}"></td>
     <td th:text="${bbs.title}"></td>
     <td th:text="${bbs.bcontent}"></td>
