--- a/mountain_project/src/main/resources/templates/manager/main.html
+++ b/mountain_project/src/main/resources/templates/manager/main.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>$Title$</title>
+  <title>main</title>
 </head>
 <body>
-  <h3>게시판</h3>
-  <h3>문의글</h3>
-  <h3>리뷰데이터</h3>
+  <h3><a href="http://localhost:9090/manager/viewBbsAll">게시판</a></h3>
+  <h3><a href="http://localhost:9090/manager/viewInquiryAll "> 문의글</a></h3>
+  <h3><a href=" ">리뷰데이터</a></h3>
 </body>
 </html>
