--- a/mountain_project/src/main/resources/templates/manager/main.html
+++ b/mountain_project/src/main/resources/templates/manager/main.html
@@ -9,6 +9,6 @@
 <body>
   <h3><a href="http://localhost:9090/manager/viewBbsAll">게시판</a></h3>
   <h3><a href="http://localhost:9090/manager/viewInquiryAll "> 문의글</a></h3>
-  <h3><a href=" ">리뷰데이터</a></h3>
+  <h3><a href="http://localhost:9090/manager/plot">리뷰데이터</a></h3>
 </body>
 </html>
