--- a/mountain_project/src/main/resources/templates/manager/plot.html
+++ b/mountain_project/src/main/resources/templates/manager/plot.html
@@ -1,24 +1,62 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>차트 출력</title>
-</head>
-<body>
-<h1>Plot Images</h1>
-<div>
-  <img th:src="'data:image/png;base64,' + ${imageData1}" alt="Plot Image 1"/>
-</div>
-<div>
-  <img th:src="'data:image/png;base64,' + ${imageData2}" alt="Plot Image 2"/>
-</div>
-<div>
-  <img th:src="'data:image/png;base64,' + ${imageData3}" alt="Plot Image 3"/>
-</div>
-<div>
-  <img th:src="'data:image/png;base64,' + ${imageData4}" alt="Plot Image 4"/>
-</div>
+  <title>관리자 리뷰 데이터</title>
+  <link rel="stylesheet" href="/common/css/template.css">
+  <style>
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow-y: auto;
+    }
 
+    .plot {
+      max-width: 800px;
+      width: 100%;
+      height: auto;
+      margin: 10px;
+      display: block;
+    }
+
+    .plot img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <header>
+      <div>header 80px</div>
+    </header>
+    <nav>gnb</nav>
+    <aside>search</aside>
+    <main>
+      <h4>관리자 리뷰 데이터</h4>
+      <div class="container">
+        <div class="plot plot1">
+          <img th:src="'data:image/png;base64,' + ${imageData1}" alt="Plot Image 1" />
+        </div>
+        <div class="plot plot2">
+          <img th:src="'data:image/png;base64,' + ${imageData2}" alt="Plot Image 2" />
+        </div>
+        <div class="plot plot3">
+          <img th:src="'data:image/png;base64,' + ${imageData3}" alt="Plot Image 3" />
+        </div>
+        <div class="plot plot4">
+          <img th:src="'data:image/png;base64,' + ${imageData4}" alt="Plot Image 4" />
+        </div>
+      </div>
+    </main>
+    <footer>footer</footer>
+  </div>
 </body>
+
 </html>
