--- a/mountain_project/src/main/resources/templates/manager/main.html
+++ b/mountain_project/src/main/resources/templates/manager/main.html
@@ -10,5 +10,6 @@
   <h3><a href="http://localhost:9090/manager/viewBbsAll">게시판</a></h3>
   <h3><a href="http://localhost:9090/manager/viewInquiryAll "> 문의글</a></h3>
   <h3><a href="http://localhost:9090/manager/plot">리뷰데이터</a></h3>
+  <img src="/images/b/34" alt="이미지">
 </body>
 </html>
