--- a/mountain_project/src/main/resources/templates/manager/plot.html
+++ b/mountain_project/src/main/resources/templates/manager/plot.html
@@ -53,6 +53,9 @@
         <div class="plot plot4">
           <img th:src="'data:image/png;base64,' + ${imageData4}" alt="Plot Image 4" />
         </div>
+        <div class="plot plot5">
+          <img th:src="'data:image/png;base64,' + ${imageData5}" alt="Plot Image 5" />
+        </div>
       </div>
     </main>
     <footer>footer</footer>
