--- a/mountain_project/src/main/resources/templates/manager/main.html
+++ b/mountain_project/src/main/resources/templates/manager/main.html
@@ -7,9 +7,11 @@
   <title>main</title>
 </head>
 <body>
-  <h3><a href="http://localhost:9090/manager/viewBbsAll">게시판</a></h3>
-  <h3><a href="http://localhost:9090/manager/viewInquiryAll "> 문의글</a></h3>
-  <h3><a href="http://localhost:9090/manager/plot">리뷰데이터</a></h3>
+  <button type="button" onclick="location.href='/manager/viewBbsAll'">게시판</button>
+  <button type="button" onclick="location.href='/manager/viewInquiryAll'">문의글</button>
+  <button type="button" onclick="location.href='/manager/plot'">리뷰데이터</button>
   <img src="/images/b/34" alt="이미지">
+
+
 </body>
 </html>
