--- a/mountain_project/src/main/resources/templates/manager/mReadBbs.html
+++ b/mountain_project/src/main/resources/templates/manager/mReadBbs.html
@@ -7,38 +7,89 @@
   <title>Document</title>
   <link rel="stylesheet" href="/common/css/template.css">
   <style>
-    /* 테이블 스타일 */
-    table {
-      width: calc(100% - 500px);
-      border-collapse: collapse;
-      margin: 20px auto;
-      /* 위쪽 여백과 가운데 정렬 */
+    main {
+      margin: 50px;
     }
 
-    th,
-    td {
-      border: 1px solid #ddd;
-      padding: 10px;
+    h4 {
+      font-size: 30px;
+      color: #000000;
+      text-transform: uppercase;
+      font-weight: 300;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .table-container {
+      width: 80%;
+    }
+
+    table {
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    .tbl-header {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    .tbl-content {
+      height: 500px;
+      overflow-x: auto;
+      margin-top: 0px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
     th {
       background-color: #f2f2f2;
-      color: var(--color-black);
-      /* 헤더 글자색 */
+      padding: 20px 15px;
+      text-align: left;
+      font-weight: 500;
+      font-size: 15px;
+      color: #000000;
+      text-transform: uppercase;
     }
 
     td {
-      text-align: center;
-      /* 표 내용 가운데 정렬 */
+      padding: 15px;
+      text-align: left;
+      vertical-align: middle;
+      font-weight: 300;
+      font-size: 15px;
+      color: #000000;
+      border-bottom: solid 1px rgba(255, 255, 255, 0.1);
     }
 
-    .chk {
-      text-align: center;
+    /* 제목 열 */
+    th:nth-child(3),
+    td:nth-child(3) {
+      width: 25%;
     }
 
-    .wrap h4 {
-      line-height: 300px;
-      margin-top: 200px;
+    td:nth-child(3) {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* 조회 수 열 */
+    th:nth-child(4),
+    td:nth-child(4) {
+      width: 8%;
+    }
+
+
+
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
@@ -53,20 +104,20 @@
     <main>
       <div class="container">
         <h4>게시판 관리자</h4>
-        <form th:action="@{/manager/searchBbs}" method="get" onsubmit="handleSearch(event)">
-          <select name="searchType">
-            <option value="all" selected> 전체</option>
-            <option value="title">제목</option>
-            <option value="mntnName">산 이름</option>
-            <option value="nickname">작성자</option>
-          </select>
-          <input type="text" name="keyword" placeholder="검색어" />
-          <button type="submit">검색</button>
-          <button type="button" onclick="location.href='/manager/comBbs'">신고글 관리</button>
-        </form>
-        <form id="frm" method="POST">
-          <div>
-            <table>
+        <div class="table-container">
+          <form th:action="@{/manager/searchBbs}" method="get" onsubmit="handleSearch(event)">
+            <select name="searchType">
+              <option value="all" selected> 전체</option>
+              <option value="title">제목</option>
+              <option value="mntnName">산 이름</option>
+              <option value="nickname">작성자</option>
+            </select>
+            <input type="text" name="keyword" placeholder="검색어" />
+            <button type="submit">검색</button>
+            <button type="button" onclick="location.href='/manager/comBbs'">신고글 관리</button>
+          </form>
+          <div class="tbl-header">
+            <table cellpadding="0" cellspacing="0" border="0">
               <thead>
                 <tr>
                   <th>선택</th>
@@ -74,11 +125,15 @@
                   <th>제목</th>
                   <th>조회수</th>
                   <th>작성일</th>
-                  <th>수정일</th>
                   <th>산 이름</th>
                   <th>글 상태</th>
                 </tr>
               </thead>
+            </table>
+          </div>
+          <div class="tbl-content">
+            <form id="frm" method="POST">
+              <table cellpadding="0" cellspacing="0" border="0">
               <tbody class="rows">
                 <tr class="row" th:each="bbs : ${list}">
                   <td class="chk"><input type="checkbox" name="bbsIds" th:value="${bbs.bbsId}" /></td>
@@ -86,13 +141,14 @@
                   <td th:text="${bbs.title}"></td>
                   <td th:text="${bbs.hit}"></td>
                   <td th:text="${#temporals.format(bbs.cdate, 'yyyy년 MM월 dd일')}"></td>
-                  <td th:text="${#temporals.format(bbs.udate, 'yyyy년 MM월 dd일')}"></td>
                   <td th:text="${bbs.mntnNm}"></td>
                   <td th:text="${bbs.status == 'N' ? '-' : (bbs.status == 'W' ? '신고됨' : '기타')}"></td>
                 </tr>
               </tbody>
-            </table>
-            <button type="button" onclick="deleteSelectedBbs()">선택된 항목 삭제</button>
+              </table>
+          </div>
+        </div>
+        <button type="button" onclick="deleteSelectedBbs()">선택된 항목 삭제</button>
         </form>
       </div>
     </main>
@@ -100,6 +156,17 @@
   </div>
 </body>
 <script th:inline="javascript">
+  // 제목 10글자 이상이면 그 이상은...으로 표현
+  document.addEventListener('DOMContentLoaded', function () {
+    const titleCells = document.querySelectorAll('td.title');
+    titleCells.forEach(cell => {
+      const text = cell.textContent;
+      if (text.length > 10) {
+        const shortenedText = text.substring(0, 10) + '...';
+        cell.textContent = shortenedText;
+      }
+    });
+  });
   function deleteSelectedBbs() {
     var selectedBbsIds = [];
     var checkboxes = document.getElementsByName("bbsIds");
@@ -137,6 +204,11 @@
       }
     }
   }
+
+  $(window).on("load resize ", function () {
+    var scrollWidth = $('.tbl-content').width() - $('.tbl-content table').width();
+    $('.tbl-header').css({ 'padding-right': scrollWidth });
+  }).resize();
 
 </script>
 
