--- a/mountain_project/src/main/resources/templates/manager/mReadInquiry.html
+++ b/mountain_project/src/main/resources/templates/manager/mReadInquiry.html
@@ -7,34 +7,80 @@
   <title>문의 관리</title>
   <link rel="stylesheet" href="/common/css/template.css">
   <style>
-    table {
-      width: calc(100% - 400px);
-      border-collapse: collapse;
-      margin: 20px auto;
+    main {
+      margin: 50px;
     }
 
-    th,
-    td {
-      border: 1px solid #ddd;
-      padding: 10px;
+    h4 {
+      font-size: 30px;
+      color: #000000;
+      text-transform: uppercase;
+      font-weight: 300;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .table-container {
+      width: 80%;
+    }
+
+    table {
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    .tbl-header {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    .tbl-content {
+      height: 500px;
+      overflow-x: auto;
+      margin-top: 0px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
     th {
       background-color: #f2f2f2;
-      color: var(--color-black);
+      padding: 20px 15px;
+      text-align: left;
+      font-weight: 500;
+      font-size: 15px;
+      color: #000000;
+      text-transform: uppercase;
     }
 
     td {
-      text-align: center;
+      padding: 15px;
+      text-align: left;
+      vertical-align: middle;
+      font-weight: 300;
+      font-size: 15px;
+      color: #000000;
+      border-bottom: solid 1px rgba(255, 255, 255, 0.1);
     }
 
-    .chk {
-      text-align: center;
+    th:nth-child(4),
+    td:nth-child(4) {
+      width: 25%;
     }
 
-    .wrap h4 {
-      line-height: 300px;
-      margin-top: 200px;
+    td:nth-child(4) {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
@@ -55,40 +101,47 @@
           <button type="button" onclick="location.href='/manager/viewInquiryProgress'">처리 중</button>
           <button type="button" onclick="location.href='/manager/viewInquiryComplete'">처리 완료</button>
         </form>
-        <table>
-          <thead>
-            <tr>
-              <th>작성자 ID</th>
-              <th>작성자 이메일</th>
-              <th>작성자</th>
-              <th>문의글 ID</th>
-              <th>문의 제목</th>
-              <th>문의 작성일</th>
-              <th>문의 수정일</th>
-              <th>상태</th>
-            </tr>
-          </thead>
-          <tbody id="rows">
-            <tr class="row" th:each="inquiry : ${list}" th:data-inquiry-id="${inquiry.inquiryId}">
-              <td th:text="${inquiry.memberId}"></td>
-              <td th:text="${inquiry.memberemail}"></td>
-              <td th:text="${inquiry.nickname}"></td>
-              <td th:text="${inquiry.inquiryId}"></td>
-              <td th:text="${inquiry.inquiryTitle}"></td>
-              <td th:text="${#temporals.format(inquiry.inquiryCdate, 'yyyy년 MM월 dd일')}"></td>
-              <td th:text="${#temporals.format(inquiry.inquiryUdate, 'yyyy년 MM월 dd일')}"></td>
-              <td th:text="${inquiry.inquiryState == 'C' ? '처리 완료' : (inquiry.inquiryState == 'P'?'처리 중':'처리 전')}"></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-container">
+          <div class="tbl-header">
+            <table cellpadding="0" cellspacing="0" border="0">
+              <thead>
+                <tr>
+                  <th>문의글 ID</th>
+                  <th>작성자 이메일</th>
+                  <th>작성자</th>
+                  <th>문의 제목</th>
+                  <th>문의 작성일</th>
+                  <th>문의 수정일</th>
+                  <th>상태</th>
+                </tr>
+              </thead>
+            </table>
+          </div>
+          <div class="tbl-content">
+            <table cellpadding="0" cellspacing="0" border="0">
+              <tbody id="rows">
+                <tr class="row" th:each="inquiry : ${list}" th:data-inquiry-id="${inquiry.inquiryId}">
+                  <td th:text="${inquiry.inquiryId}"></td>
+                  <td th:text="${inquiry.memberemail}"></td>
+                  <td th:text="${inquiry.nickname}"></td>
+                  <td th:text="${inquiry.inquiryTitle}"></td>
+                  <td th:text="${#temporals.format(inquiry.inquiryCdate, 'yyyy년 MM월 dd일')}"></td>
+                  <td th:text="${#temporals.format(inquiry.inquiryUdate, 'yyyy년 MM월 dd일')}"></td>
+                  <td th:text="${inquiry.inquiryState == 'C' ? '처리 완료' : (inquiry.inquiryState == 'P'?'처리 중':'처리 전')}">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </main>
     <footer>footer</footer>
   </div>
 </body>
 <script>
-    // 제목 10글자 이상이면 그 이상은...으로 표현
-    document.addEventListener('DOMContentLoaded', function () {
+  // 제목 10글자 이상이면 그 이상은...으로 표현
+  document.addEventListener('DOMContentLoaded', function () {
     const titleCells = document.querySelectorAll('td.title');
     titleCells.forEach(cell => {
       const text = cell.textContent;
@@ -113,6 +166,13 @@
     const inquiryId = row.dataset.inquiryId;
     location.href = `/manager/${inquiryId}/detail`;
   });
+
+
+  $(window).on("load resize ", function () {
+    var scrollWidth = $('.tbl-content').width() - $('.tbl-content table').width();
+    $('.tbl-header').css({ 'padding-right': scrollWidth });
+  }).resize();
+
 </script>
 
 </html>
